--- a/log-reg.css
+++ b/log-reg.css
@@ -4,15 +4,22 @@ div{
     word-spacing: 1.5px;
     letter-spacing: 1.5px;
     width: 450px;
-    height: 300px;
+    height: 320px;
     background-color: grey;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
 }
-.log-in{
+.log-in1{
     margin-top: -20px;
     background-color: #f2f2f2;
     border: 1px solid black;
-    border-radius: 10px;
+}
+.log-in2{
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -70px;
+    background-color: #f2f2f2;
+    border: 1px solid black;
 }
