--- a/User Login-Registration/log-reg.css
+++ b/User Login-Registration/log-reg.css
@@ -1,25 +1,72 @@
+#FUNI-logo {
+    position: absolute;
+    top: 0;
+}
+#FUNI-logo img {
+    width: 45px;
+    height: 45px;
+    border-radius: 40px;
+}
+nav {
+    display: block;
+    text-decoration: none;
+    text-align: right;
+    justify-content: space-between;
+    align-items: left;
+    padding: 1rem;
+    background-color: #282828;
+    color: white;
+}
+a {
+    padding: 1rem;
+    color: white;
+    text-decoration: none;
+}
+a:hover {
+    background-color: #333;
+}
+
+/* end of nav bar */
+
 div{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 28px;
+    font-size: 29px;
+    color: ghostwhite;
     word-spacing: 1.5px;
-    letter-spacing: 1.5px;
     width: 450px;
-    height: 220px;
-    background-color: grey;
+    height: 240px;
+    border-radius: 10px;
+    background-color: black;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 40px;
     text-align: center;
 }
-.log-in1{
-    margin-top: -20px;
-    background-color: #f2f2f2;
-    border: 1px solid black;
+.register-background{
+    background-color: ghostwhite;
+    border: 4px solid black;
+    border-radius: 10px;
+    margin-top: 20px;
+    height: 350px;
+    color: black;
 }
-.log-in2{
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: -70px;
-    background-color: #f2f2f2;
-    border: 1px solid black;
+.firstlog-in{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: -20px;
+    background-color: ghostwhite;
+    border: 4.25px solid black;
+    border-radius: 10px;
+    font-size: 29px;
+    text-align: center;
+    width: 100px;
+    height: 45px;
+}
+.secondlog-in{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: ghostwhite;
+    border: 3.25px solid black;
+    border-radius: 10px;
+    font-size: 20px;
+    width: 80px;
+    height: 35px;
 }
