--- a/HomePage/styles.css
+++ b/HomePage/styles.css
@@ -1,54 +1,67 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: #f4f4f4;
-
-}
-
 #FUNI-logo {
-    position: absolute;
-    top: 0;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+}
 
+#FUNI-logo h1 {
+    margin-right: .5rem;
+    font-size: 1.25rem;
 }
 
 #FUNI-logo img {
-    width: 45px;
-    height: 45px;
-    border-radius: 40px;
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+}
+
+#FUNI-logo:hover {
+    cursor: pointer;
+    color: #2596be;
+    transition: all 0.8s ease;
 }
 
 nav {
-    display: block;
-    text-decoration: none;
-    text-align: right;
-
+    display: flex;
     justify-content: space-between;
-    align-items: left;
-    padding: 1rem;
-    background-color: #282828;
+    align-items: center;
+    padding: .80rem;
+    background-color: rgba(40, 40, 40, 0.9);
     color: white;
 }
 
-a {
-    padding: 1rem;
-    color: white;
+nav h1 {
+    font-size: 1.5rem;
+}
+
+.nav-links a {
     text-decoration: none;
+    padding: 0.5rem 1rem;
+    color: white;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: color 0.3s ease;
 }
 
-a:hover {
-    background-color: #333;
+.nav-links a:hover {
+    text-decoration: underline;
+    color: #2596be;
 }
 
-h1 {
-    text-align: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+/* end of nav bar */
+
+body {
+    background-color: ghostwhite;
+    font-family: sans-serif, helvetica;
+    margin: 0;
+    padding: 0;
 }
+
+
+
+
 
 h2 {
     text-align: center;
