--- a/User Login-Registration/log-reg.css
+++ b/User Login-Registration/log-reg.css
@@ -26,7 +26,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .80rem;
+    padding: .75rem;
     background-color: rgba(40, 40, 40, 0.9);
     color: white;
 }
@@ -50,8 +50,6 @@ nav h1 {
     color: #2596be;
 }
 
-/* end of nav bar */
-
 body {
     background-color: ghostwhite;
     font-family: sans-serif, helvetica;
@@ -74,61 +72,95 @@ body {
     text-align: center;
 }
 
-.registration-login h1 {
+.registration-signup {
+    margin-top: 6.5rem;
+    height: 58rem;
+    width: 40rem;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 30px;
+    background-color: #454141;
+    overflow: hidden;
+    box-shadow: 0 0 10px 0 #989696;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.registration-login h2 {
     font-size: 2rem;
     color: whitesmoke;
     margin-top: 7rem;
     font-weight: lighter
 }
 
-.registration-login p {
+.registration-signup h2 {
+    font-size: 2rem;
+    color: whitesmoke;
+    margin-top: 5rem;
+    font-weight: lighter
+}
+
+.registration-login p,
+.registration-signup p {
     font-size: 1rem;
     color: whitesmoke;
     margin-top: 1rem;
     font-weight: lighter;
-
 }
 
-.registration-login input {
+.registration-login input,
+.registration-signup input {
     width: 75%;
     padding: .75rem;
-    margin: 3rem;
+    margin: 3rem auto;
     border-radius: 10px;
     font-weight: bold;
     border: 1px solid black;
     transition: border-color 0.3s ease;
 }
 
-.registration-login input:focus {
+.registration-login input:focus,
+.registration-signup input:focus {
     border-color: #2596be;
 }
 
 .registration-login .username-login,
-.registration-login .password-login {
+.registration-signup .username-signup,
+.registration-login .password-login,
+.registration-signup .password-signup,
+.registration-login .confirm-password,
+.registration-signup .confirm-password,
+.registration-login .email,
+.registration-signup .email {
     position: relative;
     font-size: 1.25rem;
-    
+    display: flex;
+    flex-direction: column;
 }
 
-.registration-login label {
+.registration-login label,
+.registration-signup label {
     position: absolute;
-    top: 1.5rem;
     left: 2rem;
-    transform: translateY(-50%);
+    transform: translateY(0%);
     transition: all 0.3s ease;
     pointer-events: none;
     color: #eaeaea;
-    
+    background-color: #454141;
+    padding: 0 0.5rem;
 }
 
 .registration-login input:focus + label,
-.registration-login input:not(:placeholder-shown) + label {
+.registration-login input:not(:placeholder-shown) + label,
+.registration-signup input:focus + label,
+.registration-signup input:not(:placeholder-shown) + label {
     font-size: 1.5rem;
     color: #2596be;
-   
 }
 
-a.register-acc {
+a.register-acc,
+a.login-acc {
     color: white;
     text-decoration: underline;
     background-color: transparent;
@@ -138,17 +170,19 @@ a.register-acc {
     font-size: 1rem;
 }
 
-a.register-acc:hover {
+a.register-acc:hover,
+a.login-acc:hover {
     color: #2596be;
 }
 
-.login-button {
+.login-button,
+.signup-button {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5rem;
+    margin-top: 3rem;
     font-family: sans-serif, helvetica;
     background-color: #2596be;
     color: white;
@@ -160,32 +194,11 @@ a.register-acc:hover {
     transition: 0.3s ease;
 }
 
-.login-button:hover {
+.login-button:hover,
+.signup-button:hover {
     color: white;
     background-color: #1a6985;
     cursor: pointer;
     transition: 0.3s ease;
     transform: scale(1.2);
 }
-
-.register-background{
-    background-color: ghostwhite;
-    border: 4px solid black;
-    border-radius: 10px;
-    margin-top: 20px;
-    height: 350px;
-    color: black;
-}
-
-.secondlog-in{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: ghostwhite;
-    border: 3.25px solid black;
-    border-radius: 10px;
-    font-size: 20px;
-    width: 80px;
-    height: 35px;
-}
-
-
-
