--- a/GoalTracker/styles.css
+++ b/GoalTracker/styles.css
@@ -11,7 +11,7 @@ div{
     border: 2px solid #333;
     border-radius: 10px;
     width: 30rem;
-    box-shadow: #2596be 0px 54px 55px, #2596be 0px -12px 30px, #2596be 0px 4px 6px, #2596be 0px 12px 13px, #2596be 0px -3px 5px;
+    box-shadow: #454141 0px 54px 55px, #454141 0px -12px 30px, #454141 0px 4px 6px,  #454141 0px 12px 13px, #454141 0px -3px 5px;
 
 }
 h1{
