--- a/HomePage/styles.css
+++ b/HomePage/styles.css
@@ -1,3 +1,10 @@
+body {
+    background-color: #ffffff;
+    font-family: 'San Franciso', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
 #FUNI-logo {
     display: flex;
     align-items: center;
@@ -18,7 +25,7 @@
 
 #FUNI-logo:hover {
     cursor: pointer;
-    color: #2596be;
+    color: #255d41;
     transition: all 0.8s ease;
 }
 
@@ -26,9 +33,10 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .80rem;
-    background-color: rgba(40, 40, 40, 0.9);
+    padding: .75rem;
+    background-color: rgba(40, 40, 40, 0.55);
     color: white;
+    font-family:'San Franciso', sans-serif;
 }
 
 nav h1 {
@@ -47,16 +55,7 @@ nav h1 {
 
 .nav-links a:hover {
     text-decoration: underline;
-    color: #2596be;
-}
-
-/* end of nav bar */
-
-body {
-    background-color: ghostwhite;
-    font-family: sans-serif, helvetica;
-    margin: 0;
-    padding: 0;
+    color: #255d41;
 }
 
 
