--- a/User Login-Registration/log-reg.css
+++ b/User Login-Registration/log-reg.css
@@ -25,7 +25,7 @@ body {
 
 #FUNI-logo:hover {
     cursor: pointer;
-    color: #2596be;
+    color: #255d41;
     transition: all 0.8s ease;
 }
 
@@ -34,7 +34,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: .75rem;
-    background-color: rgba(40, 40, 40, 0.7);
+    background-color: rgba(40, 40, 40, 0.55);
     color: white;
     font-family:'San Franciso', sans-serif;
 }
@@ -55,7 +55,7 @@ nav h1 {
 
 .nav-links a:hover {
     text-decoration: underline;
-    color: #2596be;
+    color: #255d41;
 }
 
 .registration-login {
@@ -65,9 +65,9 @@ nav h1 {
     margin-left: auto;
     margin-right: auto;
     border-radius: 30px;
-    background-color: #454141;
+    background-color: #1e4a34;
     overflow: hidden;
-    box-shadow: 0 0 10px 0 #989696;
+    box-shadow: 0 0 10px 0 #969595;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -82,9 +82,9 @@ nav h1 {
     margin-left: auto;
     margin-right: auto;
     border-radius: 30px;
-    background-color: #454141;
+    background-color: #1e4a34;
     overflow: hidden;
-    box-shadow: 0 0 10px 0 #989696;
+    box-shadow: 0 0 10px 0 #969595;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -125,7 +125,7 @@ nav h1 {
     padding: .75rem;
     margin: 3rem auto;
     border-radius: 10px;
-    font-weight: bold;
+
     border: 1px solid black;
     transition: border-color 0.3s ease;
 }
@@ -157,7 +157,7 @@ nav h1 {
     transition: all 0.3s ease;
     pointer-events: none;
     color: #eaeaea;
-    background-color: #454141;
+    background-color: #1e4a34;
     padding: 0 0.5rem;
 }
 
@@ -166,7 +166,7 @@ nav h1 {
 .registration-signup input:focus + label,
 .registration-signup input:not(:placeholder-shown) + label {
     font-size: 1.5rem;
-    color: #2596be;
+    color: #ffffff;
 }
 
 a.register-acc,
@@ -182,7 +182,7 @@ a.login-acc {
 
 a.register-acc:hover,
 a.login-acc:hover {
-    color: #2596be;
+    color: #a2a2a2;
     transition: all 0.5s ease;
 }
 
@@ -195,7 +195,7 @@ a.login-acc:hover {
     margin-right: auto;
     margin-top: 3rem;
     font-family:'San Franciso', sans-serif;
-    background-color: #2596be;
+    background-color: #a2a2a2;
     color: #fafafa;
     border: 1px solid black;
     border-radius: 10px;
@@ -208,7 +208,7 @@ a.login-acc:hover {
 .login-button:hover,
 .signup-button:hover {
     color: #fafafa;
-    background-color: #1a6985;
+    background-color: #7a7a7a;
     cursor: pointer;
     transition: 0.3s ease;
     transform: scale(1.2);
