--- a/Login/styles.css
+++ b/Login/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ffffff;
+    background-color: #1e4a34;
     font-family: 'San Franciso', sans-serif;
     margin: 0;
     padding: 0;
@@ -34,7 +34,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: .75rem;
-    background-color: rgba(40, 40, 40, 0.55);
+    background-color: rgb(145, 145, 145);
     color: white;
     font-family:'San Franciso', sans-serif;
 }
@@ -59,15 +59,15 @@ nav h1 {
 }
 
 .registration-login {
-    margin-top: 6.5rem;
+    margin-top: 3.5rem;
     height: 43.5rem;
     width: 40rem;
     margin-left: auto;
     margin-right: auto;
     border-radius: 30px;
-    background-color: #1e4a34;
+    background-color: #f3f3f3;
     overflow: hidden;
-    box-shadow: 0 0 10px 0 #969595;
+    box-shadow: 0 0 10px 0 #3c3c3c;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -75,22 +75,6 @@ nav h1 {
     transition: opacity 1.5s ease-in-out;
 }
 
-.registration-signup {
-    margin-top: 6.5rem;
-    height: 58rem;
-    width: 40rem;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 30px;
-    background-color: #1e4a34;
-    overflow: hidden;
-    box-shadow: 0 0 10px 0 #969595;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    opacity: 0;
-    transition: opacity 1.5s ease-in-out;
-}
 
 .registration-login.show {
     opacity: 1;
@@ -98,7 +82,7 @@ nav h1 {
 
 .registration-login h2 {
     font-size: 2rem;
-    color: #fafafa;
+    color: #383838;
     margin-top: 7rem;
     font-weight: lighter;
 }
@@ -106,7 +90,7 @@ nav h1 {
 
 .registration-login p {
     font-size: 1rem;
-    color: #fafafa;
+    color: #383838;
     margin-top: 1rem;
     font-weight: lighter;
 }
@@ -118,6 +102,8 @@ nav h1 {
     border-radius: 10px;
     border: 1px solid black;
     transition: border-color 0.3s ease;
+    background-color: #fafafa;
+    border: 1px solid #c8c8c8;
 }
 
 .registration-login input:hover {
@@ -138,19 +124,19 @@ nav h1 {
     transform: translateY(0%);
     transition: all 0.3s ease;
     pointer-events: none;
-    color: #eaeaea;
-    background-color: #1e4a34;
+    color: #383838;
+    background-color: #f3f3f3;
     padding: 0 0.5rem;
 }
 
 .registration-login input:focus + label,
 .registration-login input:not(:placeholder-shown) + label {
     font-size: 1.5rem;
-    color: #ffffff;
+    color: #383838;
 }
 
 a.register-acc {
-    color: #fafafa;
+    color: #383838;
     text-decoration: underline;
     background-color: transparent;
     padding: 0;
@@ -160,7 +146,7 @@ a.register-acc {
 }
 
 a.register-acc:hover {
-    color: #a2a2a2;
+    color: #2596be;
     transition: all 0.5s ease;
 }
 
@@ -172,7 +158,7 @@ a.register-acc:hover {
     margin-right: auto;
     margin-top: 3rem;
     font-family:'San Franciso', sans-serif;
-    background-color: #a2a2a2;
+    background-color: #2596be;
     color: #fafafa;
     border: 1px solid black;
     border-radius: 10px;
@@ -184,7 +170,7 @@ a.register-acc:hover {
 
 .login-button:hover {
     color: #fafafa;
-    background-color: #7a7a7a;
+    background-color: #1e7898;
     cursor: pointer;
     transition: 0.3s ease;
     transform: scale(1.2);
