--- a/HomePage/styles.css
+++ b/HomePage/styles.css
@@ -59,9 +59,6 @@ nav h1 {
 }
 
 
-
-
-
 h2 {
     text-align: center;
     margin-top: 2rem;
@@ -73,3 +70,44 @@ p {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
+.home-page{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.slideshow-container {
+    position: relative;
+    max-width: 120rem;
+    position: relative;
+}
+
+.mySlides img {
+    width: 120rem;
+    height: 65rem; 
+    object-fit: cover; 
+    background-origin: padding-box;
+    opacity: 0.85;
+}
+
+.about-us-section{
+    background-color: #ffffff;
+    color: grey;
+    width: 60rem;
+    height: 20rem;
+    font-size: 1.5rem;
+    font-family: 'San Franciso', sans-serif;
+    color: black;
+    letter-spacing: -1px;
+    font-weight: bolder;
+}
+
+.about-background{
+    width: 100%;
+    align-items: center;
+}
+
+
