--- a/Billing/styles.css
+++ b/Billing/styles.css
@@ -130,7 +130,7 @@ h2 {
     font-size: 1rem;
     border: 1px solid #c8c8c8;
     border-radius: 10px;
-    background-color: #fafafa;
+    background-color: ;
     transition: transform 0.3s ease, border-color 0.3s ease;
 }
 
@@ -242,3 +242,10 @@ h4 {
     cursor:default;
 }
 
+p {
+    color: #333;
+    border-radius: 8px;
+    padding: 10px;
+    background-color: #e9ecef;
+    margin-top: 2rem;
+}
