--- a/Loan Calc/styles.css
+++ b/Loan Calc/styles.css
@@ -98,22 +98,18 @@ h2 {
     padding: 3rem;
     width: 29.5%;    
     margin-top: -1.65rem;
-}
-
-form {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-weight: bold;
-    width: 100%;
-} 
+}
 
 input { 
-    margin-top: 2rem;
+    margin-top: 3rem;
     margin-left: .5rem;
     padding: 0.25rem;
     font-size: 1rem;
+    width: 15rem;
     border: 1px solid #c8c8c8;
     border-radius: 10px;
     background-color: #fafafa;
@@ -142,23 +138,9 @@ input:hover {
     border-color: #2596be;
 }
 
-.calculate-payment {
-    margin-top: 3rem;
-    padding: 1rem;
-    border-radius: 10px;
-    border: #383838;
-    background-color: #e8e8e8;
-    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.07);
-    text-align: center;
-    font-size: 1.65rem;
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-    box-sizing: border-box;
-}
-
 #calcLoan {
     margin-top: 3rem;
+    margin-left: 5.8rem;
     font-family:'San Franciso', sans-serif;
     background-color: #2596be;
     color: #fafafa;
@@ -178,15 +160,20 @@ input:hover {
     transform: scale(1.05);
 }
 
+.calculate-payment {
+    margin-top: 3rem;
+    padding: 1rem;
+    border-radius: 10px;
+    border: #383838;
+    background-color: #e8e8e8;
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.07);
+    text-align: center;
+    font-size: 1.65rem;
+    width: 65%;
+    box-sizing: border-box;
+}
+
 #adjustedAmount {
     display: none;
     transition: opacity 0.5s ease-in-out;
-}
-
-.form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
 }
