--- a/Login/styles.css
+++ b/Login/styles.css
@@ -13,49 +13,105 @@ body {
 }
 
 #FUNI-logo h1 {
-    margin-right: .5rem;
+    margin-left: 1rem;
     font-size: 1.25rem;
+    order: 2;
 }
 
 #FUNI-logo img {
     width: 3.5rem;
     height: 3.5rem;
     border-radius: 50%;
+    order: 1;
 }
 
 #FUNI-logo:hover {
     cursor: pointer;
-    color: #255d41;
+    color: #4a9973;
     transition: all 0.8s ease;
 }
 
 nav {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .75rem;
-    background-color: rgb(145, 145, 145);
+    justify-content: center;
+    padding: .75rem 2rem;
+    background-color: #0c1e15;
     color: white;
     font-family:'San Franciso', sans-serif;
 }
 
-nav h1 {
-    font-size: 1.5rem;
+ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
 }
 
-.nav-links a {
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    color: white;
-    background-color: transparent;
+ul li {
+    margin-left: 3.5rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+ul li:hover {
     cursor: pointer;
-    font-size: 1rem;
-    transition: color 0.3s ease;
+    color: #2596be;
+    transition: all 0.5s ease;
 }
 
-.nav-links a:hover {
-    text-decoration: underline;
-    color: #255d41;
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    cursor: pointer;
+    color: #2596be;
+    transition: all 0.5s ease;
+}
+
+.dropdown-content {
+    text-align: center;
+    display: none;
+    position: absolute;
+    font-size: 1rem;
+    background-color: #c8c8c8;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0, 0.4);
+    z-index: 1;
+    top: 4%;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+#signOut {
+    display: inline-block;
+    text-align: center;
+    padding: 0.25rem;
+    background-color: transparent;
+    border: none;
+    font-size: inherit;
+    color: white;
+}
+
+#signOut:hover {
+    cursor: pointer;
+    color: #8c8c8c;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    cursor: pointer;
+    background-color: #8c8c8c;
 }
 
 .registration-login {
