--- a/MainPage/styles.css
+++ b/MainPage/styles.css
@@ -5,79 +5,119 @@
 }
 
 body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: #f4f4f4;
-
+    background-color: #ffffff;
+    font-family: 'San Franciso', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 #FUNI-logo {
-    position: absolute;
-    top: 0;
-
-}
-
-#FUNI-logo img {
-    width: 45px;
-    height: 45px;
-    border-radius: 40px;
-}
-
-nav {
-    position: relative;
-    display: block;
+    display: flex;
+    align-items: center;
     text-decoration: none;
-    text-align: right;
-
-    justify-content: space-between;
-    align-items: left;
-    padding: 1.5rem;
-    background-color: #282828;
     color: white;
 }
 
+#FUNI-logo h1 {
+    margin-left: 1rem;
+    font-size: 1.25rem;
+    order: 2;
+}
+
+#FUNI-logo img {
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+    order: 1;
+}
+
+#FUNI-logo:hover {
+    cursor: pointer;
+    color: #4a9973;
+    transition: all 0.8s ease;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    padding: .75rem 2rem;
+    background-color: #0c1e15;
+    color: white;
+    font-family:'San Franciso', sans-serif;
+}
+
+ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+
+ul li {
+    margin-left: 3.5rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+ul li:hover {
+    cursor: pointer;
+    color: #2596be;
+    transition: all 0.5s ease;
+}
+
 a {
-    padding: 1rem;
     color: white;
     text-decoration: none;
 }
 
 a:hover {
-    background-color: #333;
+    cursor: pointer;
+    color: #2596be;
+    transition: all 0.5s ease;
 }
 
-ul.dropdown {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+.dropdown-content {
+    text-align: center;
+    display: none;
     position: absolute;
-    right: 0;
-    top: 0;
+    font-size: 1rem;
+    background-color: #c8c8c8;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0, 0.4);
+    z-index: 1;
+    top: 4%;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
-ul.dropdown li {
-    display: inline-block;
-}
-
-ul.dropdown li a {
-    display: block;
-    padding: 1rem;
-    text-decoration: none;
+#signOut {
+    display: in-block;
+    text-align: center;
+    padding: 0.25rem;
+    background-color: transparent;
+    border: none;
+    font-size: inherit;
     color: white;
 }
 
-ul.dropdown ul {
-    float: right;
-    display: none;
-    position: relative;
-    background-color: #282828;
+#signOut:hover {
+    cursor: pointer;
+    color: #8c8c8c;
 }
 
-ul.dropdown ul li {
+.dropdown:hover .dropdown-content {
     display: block;
 }
 
-ul.dropdown:hover ul {
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
     display: block;
+}
+
+.dropdown-content a:hover {
+    cursor: pointer;
+    background-color: #8c8c8c;
 }
 
 h1 {
