--- a/MainPage/styles.css
+++ b/MainPage/styles.css
@@ -89,6 +89,21 @@ a:hover {
     overflow: hidden;
 }
 
+#signOut {
+    display: in-block;
+    text-align: center;
+    padding: 0.25rem;
+    background-color: transparent;
+    border: none;
+    font-size: inherit;
+    color: white;
+}
+
+#signOut:hover {
+    cursor: pointer;
+    color: #8c8c8c;
+}
+
 .dropdown:hover .dropdown-content {
     display: block;
 }
