--- a/MainPage/styles.css
+++ b/MainPage/styles.css
@@ -89,21 +89,6 @@ a:hover {
     overflow: hidden;
 }
 
-#signOut {
-    display: in-block;
-    text-align: center;
-    padding: 0.25rem;
-    background-color: transparent;
-    border: none;
-    font-size: inherit;
-    color: white;
-}
-
-#signOut:hover {
-    cursor: pointer;
-    color: #8c8c8c;
-}
-
 .dropdown:hover .dropdown-content {
     display: block;
 }
@@ -120,11 +105,70 @@ a:hover {
     background-color: #8c8c8c;
 }
 
-h1 {
+h2 {
     text-align: center;
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
+p {
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-weight: normal;
+}
+
+.home-page{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.slideshow-container {
+    position: relative;
+    max-width: 120rem;
+}
+
+.slides img {
+    width: 120rem;
+    height: 65rem; 
+    object-fit: contain; 
+    background-origin: padding-box;
+    opacity: 0.85;
+}
+
+.slides img.money{
+    object-fit: cover; 
+}
+
+.about-us-section{
+    background-color: #ffffff;
+    color: grey;
+    font-size: 1.5rem;
+    font-family: 'San Franciso', sans-serif;
+    color: black;
+    width: 90rem;
+    height: 23rem;
+    font-weight: bold;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    animation: fade-in 5s ease-in-out;
+    padding-bottom: 15rem;
+    }
+
+@keyframes fade-in {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+}
+
+.description:view-transition{
+        transition: all 0.5s ease;
+ }
 
 .grid-container {
     position: flex;
